--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@portabletext/react": "^3.0.11",
+    "@sanity/client": "^6.10.0",
     "@sanity/image-url": "^1.0.2",
     "framer-motion": "^10.17.9",
     "next": "14.0.4",
+    "next-sanity": "^7.0.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
