--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/client": "^6.10.0",
     "@sanity/image-url": "^1.0.2",
     "framer-motion": "^10.17.9",
+    "lucide-react": "^0.483.0",
     "next": "14.0.4",
     "next-sanity": "^7.0.10",
     "react": "^18",
