--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^5.0.1",
     "@portabletext/react": "^3.0.11",
     "@sanity/client": "^6.10.0",
     "@sanity/image-url": "^1.0.2",
     "framer-motion": "^10.17.9",
     "lucide-react": "^0.483.0",
-    "next": "14.0.4",
+    "next": "14.1",
     "next-sanity": "^7.0.10",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.2",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^6.7.0",
-    "vercel": "^33.0.2"
+    "resend": "^4.4.1",
+    "vercel": "^33.0.2",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/node": "^20",
