--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@portabletext/react": "^3.0.11",
     "@sanity/client": "^6.10.0",
     "@sanity/image-url": "^1.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.17.9",
     "lucide-react": "^0.483.0",
     "next": "14.1",
@@ -24,6 +26,8 @@
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^6.7.0",
     "resend": "^4.4.1",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "vercel": "^33.0.2",
     "zod": "^3.24.3"
   },
